# dbus-sharing

./: CMakeLists.txt  main.cpp  readme.md  sharing.cpp  sharing.hpp  sharingservice.cpp  sharingservice.hpp
data/: dbus-sharing.conf  org.rt.sharing.service
